src/styles.module.scss
.containerHero {
  background: linear-gradient(135deg, #f5f7f6, #dfeee7);
  padding: 60px 0;
}

section{
  scroll-margin-top: 80px;
}

.containerContent {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 40px;
}

.content {
  width: 40%;

  h1 {
    font-size: 60px;
    text-align: start;

    span {
      background: linear-gradient(90deg, #16b5a2, #0fab46);
      background-clip: text;
      color: transparent;
    }
  }

  p {
    font-size: 20px;
    margin-top: 20px;
    text-align: start;
    line-height: 1.6;
    color: #555;
    max-width: 500px;
  }

  .boxButtons {
    margin: 30px 0 15px;
    display: flex;
    flex-direction: row;
    gap: 20px;
    justify-content: flex-start;
    align-items: center;

    a {
      border-radius: 999px;
      padding: 18px 32px;
      cursor: pointer;
    }

    .btnAction {
      color: white;
      background: linear-gradient(90deg, #16b5a2, #0fab46);
      font-weight: bold;
      transition: all 0.3s ease;
      border: 2px solid transparent;
      box-shadow: 10px 10px 20px rgba(41, 145, 41, 0.4);

      &:hover {
        transform: scale(1.05);
        box-shadow: 10px 10px 20px rgba(41, 145, 41, 0.6);
      }
    }

    .btnContact {
      border: 2px solid rgb(209, 208, 208);
    }
  }
}

.img {
  width: 100%;
  max-width: 600px;
  height: auto;
  border-radius: 30px;
  object-fit: cover;
  box-shadow: 10px 20px 50px rgba(9, 255, 9, 0.2);
}

.containerServices {
  padding: 60px 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgba(253, 253, 253, 0.3);
}

.titleSection {
    font-size: 45px;
}

.subTitleSection {
    margin-top: 10px;
    font-size: 18px;
    text-align: center;
    max-width: 600px;
    color: #555;
}

.contentServices {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 30px;
  margin-top: 50px;
}

.containerAbout{
  padding: 60px 0;
  background: linear-gradient(135deg, #f5f7f6, #dfeee7);

  .contentAbout{
    display: flex;
    justify-content: space-between;
    gap: 10px;
  }

  .boxContentAbout{
    max-width: 600px;

    p{
      color: #555;
      font-size: 18px;
      margin: 25px 0;
      line-height: 1.6;
    }

    .boxInfosAbout{
      display: flex;
      justify-content: space-around;
      padding: 20px 0;

      article{
        display: flex;
        flex-direction: column;
        align-items: center;

        strong{
          font-size: 30px;
          font-weight: 900;
        }

        span{
          color: #555;
          font-size: 14px;
        }

        .numberYear{
          color: rgb(83, 193, 236);
        }

        .numberClient{
          color: rgb(58, 197, 107);
        }

        .numberProfessionals{
          color: rgb(224, 115, 31);
        }
      }
    }
  }
}

.boxImgsAbout{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;

  img{
    width: 270px;
    height: 200px;
    object-fit: cover;
    border-radius: 10px;
    transition: all 0.3s ease;

    &:nth-child(odd){
      transform: translateY(-20px);
    }
  }
}

.containerTestimonials{
  background-color: rgba(253, 253, 253, 0.3);
  padding: 60px 0;

  .titleSection, p{
    text-align: center;
  }

  p{
    color: #555;
    margin-top: 10px;
  }
}

.boxTestimonials, .boxCardsContact{
    display: flex;
    gap: 30px;
    margin-top: 60px;
}

.containerContact{
  padding: 60px 0;
  background: linear-gradient(120deg, rgb(22, 181, 162, 0.8), rgb(15, 171, 70, 0.8));

  h2{
    color: white;
  }

  p{
    color: #eeeeee;
    margin-top: 10px;
  }

  h2, p{
    text-align: center;
  }
}

footer{
  padding: 60px 0;
  background-color: #011627;

  .boxContentFooter{
    display: flex;
    justify-content: space-between;

    .boxLogoFooter{
      max-width: 300px;

      div{
        display: flex;
        align-items: center;
        gap: 10px;
        color: white;
        font-weight: bold;
        font-size: 25px;
        margin-bottom: 15px;
      }

      p{
        color: #aaaaaa;
        font-size: 14px;
        line-height: 1.6;
      }
    }

    .boxInfosFooter{
      p{
        color: white;
        font-weight: 600;
        font-size: 16px;
        margin-bottom: 15px;
      }

      ul{
        list-style: none;
        display: flex;
        flex-direction: column;
        gap: 10px;

        li{
          color: #aaaaaa;
          font-size: 14px;

          a{
            text-decoration: none;
            color: #aaaaaa;

            &:hover{
              text-decoration: underline;
            }
          }
        }
      }
    }

    .boxSocial{
      p{
        color: white;
        font-weight: 600;
        font-size: 16px;
        margin-bottom: 15px;
      }

      ul{
        display: flex;
        gap: 10px;
        list-style: none;

        li{
          a{
            text-decoration: none;
            color: white;
            background-color: rgb(255, 255, 255, 0.15);
            display: flex;
            justify-content: center;
            align-items: center;
            width: 50px;
            height: 50px;
            border-radius: 50%;
            transition: background 0.4s ease;


            &:hover{
              background-color: rgb(255, 255, 255, 0.25);
            }
          }
        }
      }
    }
  }

  .lineFooter{
      width: 100%;
      height: 1px;
      background-color: rgb(170, 170, 170, 0.15);
      margin: 50px 0;
  }

  .copy{
    text-align: center;
    color: #aaaaaa;
    opacity: 0.7;
    font-size: 14px;
  }
}

@media (max-width: 1080px) {
  .containerContent {
    flex-direction: column;
  }

  .content {
    width: 100%;

    h1 {
      text-align: center;
    }

    p {
      max-width: 100%;
      text-align: center;
    }

    .boxButtons {
      justify-content: center;
    }
  }

  .img {
    max-width: 100%;
  }

  .contentServices {
    grid-template-columns: repeat(2, 1fr);
  }

  .contentAbout{
    flex-direction: column;

    .boxContentAbout{
      max-width: 100%;

      h2, p{
        text-align: center;
      }
    }

    .boxImgsAbout{
      margin-top: 50px;

      img{
        width: 100%;
      }
    }
  }
}

@media (max-width: 768px) {
  .content {
    h1 {
      font-size: 60px;
    }

    P{
      font-size: 24px;
      margin-top: 25px;
    }

    .boxButtons {
      flex-direction: column;

      a{
        font-size: 24px;
        padding: 24px 36px;
      }
    }
  }

  .contentServices {
    grid-template-columns: repeat(1, 1fr);
  }

  .titleSection {
      font-size: 40px;
  }

  .subTitleSection{
    font-size: 20px;
    line-height: 1.6;
    margin-top: 12px;
  }


  .contentAbout{
    .boxContentAbout{
      p{
        font-size: 24px;
      }

      .boxInfosAbout{
        article{
          strong{
            font-size: 32px;
          }

          span{
            font-size: 18px;
          }
        }
      }
    }
  }
  
  .boxTestimonials, .boxCardsContact{
    flex-direction: column;
  }

  footer{
    .boxContentFooter{
      flex-direction: column;
      gap: 25px;

      .boxLogoFooter{
        max-width: 100%;

        div{
          span{
            font-size: 40px;
          }
        }

        p{
          font-size: 22px;
        }
      }

      .boxInfosFooter{
        p{
          font-size: 22px;
        }

        ul{
          li, a{
            font-size: 20px;
          }
        }
      }

      .boxSocial{
        p{
          font-size: 22px;
        }

        ul li{
            a{
              width: 80px;
              height: 80px;
              font-size: 24px;
            }
        }
      }
    }

    .copy{
      font-size: 18px;
    }
  }
}

